dnl Process this file with autoconf to produce a configure script.
AC_INIT(opercmd.h)

AC_CONFIG_HEADER(setup.h)

AC_ARG_WITH(select, \
[  --with-select           use select() instead of poll()], with_select=yes, with_select=no)
AC_ARG_WITH(unreal, \
[  --with-unreal           you need this if you are using Unreal ircd (any version)], with_unreal=yes, with_unreal=no)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

if test "$with_select" = "yes"; then
 echo "use of select() forced, skipping poll() checks..."
 AC_DEFINE(WITH_SELECT, 1, [Define if you wish to force use of select() even when poll() may be present])
else
 AC_CHECK_HEADERS(sys/poll.h, have_poll_sys_h=yes, have_sys_poll_h=no)
fi

if test "$with_unreal" = "yes"; then
 echo "configuring for Unreal ircd"
 AC_DEFINE(WITH_UNREAL, 1, [Define if you are using Unreal ircd (any version)])
fi

AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME

dnl if they want select() or they don't have poll() then we need to check
dnl that we actually have select()
if test "$with_select" = "yes" || test "$have_sys_poll_h" = "no"; then
 AC_CHECK_FUNCS(select, have_select=yes, have_select=no)
 if test "$have_select" = "no"; then
   AC_MSG_ERROR([No select() implementation found])
 fi
fi

AC_CHECK_FUNCS(socket strdup strstr)

dnl AIX fun
AC_C_BIGENDIAN

dnl teehee - taken from MRTG / Tobias Oetiker
echo $ECHO_N "checking for POSIX-compliant goat$ac_c"
for bleh in 1 2 3; do
 echo $ECHO_N "."        
 sleep 1
done
AC_MSG_RESULT([ http://www.blitzed.org/goat_winter_2001.phtml])

AC_OUTPUT(Makefile)

echo
echo "You'll find more (infrequently changed) options in options.h"
echo "Type make to compile BOPM (requires GNU Make, so try gmake on BSD systems)"
echo
