dnl Process this file with autoconf to produce a configure script.
AC_INIT(bopm, [3.1.2])
AC_CONFIG_SRCDIR(src/opercmd.h)
AM_CONFIG_HEADER(src/setup.h)
AM_INIT_AUTOMAKE()
AC_PREFIX_DEFAULT([\${HOME}/bopm])
AM_MAINTAINER_MODE

AC_ARG_WITH(extra-fascism,
    AC_HELP_STRING([--with-extra-fascism],
    [Add extra gcc3-specific warning flags]),
    [CFLAGS="$CFLAGS -g -O0 -W -Wall -Wfloat-equal -Wbad-function-cast -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wredundant-decls -Wnested-externs"])

dnl ipv6?
dnl AC_ARG_ENABLE(ipv6,
dnl     AC_HELP_STRING([--enable-ipv6], [Enable IPV6 support]),
dnl     [ac_cv_ipv6=$enableval], [ac_cv_ipv6="no"])

dnl AC_MSG_CHECKING([whether to enable IPv6 features])

dnl if test "$ac_cv_ipv6" = "yes" ; then
dnl         AC_DEFINE(IPV6, 1, [Use Ipv6 Support])
dnl         AC_MSG_RESULT([yes])
dnl else
dnl         AC_MSG_RESULT([no])
dnl fi

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

AC_CHECK_HEADERS(sys/poll.h, have_poll_sys_h=yes, have_sys_poll_h=no)

AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h strings.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME

AC_FUNC_SNPRINTF

dnl check for yacc
AC_PROG_INSTALL
AC_PROG_YACC

dnl check for lexx
AM_PROG_LEX

dnl check if we need -lsocket or -lnsl
ETR_SOCKET_NSL

AC_CHECK_FUNCS(inet_aton inet_pton socket strdup strstr)

dnl Check if we can use gethostbyname2 for ipv6
AC_CHECK_FUNCS(gethostbyname gethostbyname2)

dnl AIX fun
AC_C_BIGENDIAN

AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(long)


dnl teehee - taken from MRTG / Tobias Oetiker
dnl echo $ECHO_N "checking for POSIX-compliant goat $ECHO_C"
dnl for bleh in 1 2 3; do
dnl  echo $ECHO_N "."        
dnl  sleep 1
dnl done
dnl AC_MSG_RESULT([ http://www.blitzed.org/goat_winter_2001.phtml])

AH_BOTTOM([
#if SIZEOF_INT==4
typedef signed int int32;
typedef unsigned int uint32;
#elif SIZEOF_LONG==4
typedef signed long int32;
typedef unsigned long uint32;
#else
#  error "No 32-bit integer type!"
#endif

#if SIZEOF_SHORT!=2
#  error "Your short int data type is not 2 bytes: firedns is not going to work for you.  mail bopm@lists.blitzed.org!"
#endif
])

AC_CONFIG_SUBDIRS(src/libopm)

dnl This comes last because configure won't actually work with -Werror in
dnl the CFLAGS
AC_ARG_WITH(werror,
    AC_HELP_STRING([--with-werror],
    [use -Werror to abort compilation on any warning]),
    [CFLAGS="$CFLAGS -Werror"])

AC_OUTPUT(Makefile src/Makefile)


echo "##############################################################################"
echo "Everything is now configured, but you can find some more (infrequently"
echo "changed) options in options.h.  To compile BOPM now, just type make.  It"
echo "requires GNU Make, which may be installed as gmake on your system."
echo 
echo "bopm will be installed in ${prefix}.  To change this, run:"
echo "   ./configure --prefix=DIRECTORY"
echo 
echo "If possible, PLEASE CONTRIBUTE TO OUR DNSBL BY REPORTING YOUR PROXIES!!"
echo
echo "o What is DNSBL?"
echo "    It's the database of open proxies we provide and your BOPM checks"
echo "    against BEFORE bothering to scan the client, therefore killing KNOWN"
echo "    proxies faster and more efficiently."
echo
echo "o Why should my network contribute?"
echo "    Because the more that do, the more proxies we know about and the"
echo "    better the service becomes for all BOPM users including YOU!  People"
echo "    are also using our DNSBL to block spam (spammers use open proxies"
echo "    too!) so you'd be helping the whole Internet."
echo
echo "o Sounds complicated, what do you need?"
echo "    BOPM is already designed to report the proxies you find, but it is"
echo "    turned off by default.  To enable it all you have to do is:"
echo "      - Set DNSBL_FROM to a unique email address that we can contact you"
echo "        at if there is ever any problem with your reports."
echo "      - Email us now at opm-bopm@blitzed.org to tell us what you have"
echo "        set your DNSBL_FROM to."
echo "      - Set DNSBL_TO to bopm@reports.blitzed.org."
echo "      - Set SENDMAIL to contain the path to your sendmail binary (even"
echo "        if you don't use sendmail you will have a binary named sendmail in"
echo "        /usr/sbin or /usr/lib."
echo
echo "For more info about the people who already report their proxies, please"
echo "see http://www.blitzed.org/bopm/   - Thank you!"
echo "##############################################################################"
echo
